added Ruedin & Morales (2019) manifesto sections data

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ todos.md
 
 notebooks/
 data/lehmann+zobel_2018_labeled_manifestos.tsv
+data/ruedin_and_morales_2019/manifesto_migration_sections/
 
 ## Python
 
